add tntvillage torrent support

--- a/gui/slick/interfaces/default/config_providers.tmpl
+++ b/gui/slick/interfaces/default/config_providers.tmpl
@@ -99,7 +99,7 @@ var show_nzb_providers = #if $sickbeard.USE_NZBS then "true" else "false"#;
                                 <span class="component-title jumbo">Configure Provider:</span>
                                 <span class="component-desc">
                                     #set $provider_config_list = []
-                                    #for $cur_provider in ("thepiratebay", "tvtorrents", "btn", "torrentleech", "iptorrents", "omgwtfnzbs", "kickasstorrents", "sceneaccess", "hdbits"):
+                                    #for $cur_provider in ("thepiratebay", "tvtorrents", "btn", "torrentleech", "iptorrents", "omgwtfnzbs", "kickasstorrents", "sceneaccess", "tntvillage", "hdbits"):
                                         #set $cur_provider_obj = $sickbeard.providers.getProviderClass($cur_provider)
                                         #if $cur_provider_obj.providerType == $GenericProvider.NZB and not $sickbeard.USE_NZBS:
                                         	#continue
@@ -272,6 +272,40 @@ var show_nzb_providers = #if $sickbeard.USE_NZBS then "true" else "false"#;
                             </label>
                         </div>
 </div><!-- /sceneaccessDiv //-->
+
+<div class="providerDiv" id="tntvillageDiv">
+                        <div class="field-pair">
+                            <label class="clearfix">
+                                <span class="component-title">Username:</span>
+                                <input class="component-desc" type="text" name="tntvillage_username" value="$sickbeard.TNTVILLAGE_USERNAME" size="40" />
+                            </label>
+                        </div>
+                        <div class="field-pair">
+                            <label class="clearfix">
+                                <span class="component-title">Password:</span>
+                                <input class="component-desc" type="password" name="tntvillage_password" value="$sickbeard.TNTVILLAGE_PASSWORD" size="40" />
+                            </label>
+                        </div>
+                        <div class="field-pair">
+                            <label class="clearfix">
+                                <span class="component-title">Page Number:</span>
+                                <input class="component-desc" type="number" name="tntvillage_page" value="$sickbeard.TNTVILLAGE_PAGE" size="10" />
+                            </label>
+                        </div>
+			<div class="field-pair">
+                            <input type="checkbox" name="tntvillage_subtitle" id=""tntvillage_subtitle"" #if $sickbeard.TNTVILLAGE_SUBTITLE then "checked=\"checked\"" else ""#/>
+                            <label class="clearfix" for=""tntvillage_subtitle"">
+                                <span class="component-title">Subtitled</span>
+                            </label>
+                        </div>
+			<div class="field-pair">
+                            <input type="checkbox" name="tntvillage_fullscan" id=""tntvillage_fullscan"" #if $sickbeard.TNTVILLAGE_FULLSCAN then "checked=\"checked\"" else ""#/>
+                            <label class="clearfix" for=""tntvillage_fullscan"">
+                                <span class="component-title">Full Scan</span>
+                            </label>
+                        </div>
+
+</div><!-- /tntvillageDiv //-->
 
 <div class="providerDiv" id="hdbitsDiv">
                         <div class="field-pair">
