--- a/gui/slick/interfaces/default/config_notifications.tmpl
+++ b/gui/slick/interfaces/default/config_notifications.tmpl
@@ -1069,6 +1069,12 @@
 	                                    <span class="component-desc">Method to decide which episodes to download in new show</span>
 	                                </label>
 	                            </div>                            
+				    <div class="field-pair">
+                            		<label class="clearfix" for="trakt_num_ep">
+                                	    <span class="component-title">Number of Episode:</span>
+                                	    <input class="component-desc" type="number" name="trakt_num_ep" value="$sickbeard.TRAKT_NUM_EP"/>
+                            		</label>
+                        	    </div>
 	                            <div class="field-pair">
 	                                <input type="checkbox" name="trakt_remove_watchlist" id="trakt_remove_watchlist" #if $sickbeard.TRAKT_REMOVE_WATCHLIST then "checked=\"checked\"" else ""# />
 	                                <label class="clearfix" for="trakt_remove_watchlist">
