--- a/gui/slick/interfaces/default/config_notifications.tmpl
+++ b/gui/slick/interfaces/default/config_notifications.tmpl
@@ -1076,9 +1076,16 @@
                             		</label>
                         	    </div>
 	                            <div class="field-pair">
+	                                <input type="checkbox" name="trakt_remove_show_watchlist" id="trakt_remove_show_watchlist" #if $sickbeard.TRAKT_REMOVE_SHOW_WATCHLIST then "checked=\"checked\"" else ""# />
+	                                <label class="clearfix" for="trakt_remove_show_watchlist">
+	                                    <span class="component-title">Add/Remove Show from Watchlist:</span>
+	                                    <span class="component-desc">Add/Remove a Show from the watchlist after it is completly watched</span>
+	                                </label>
+	                            </div>
+	                            <div class="field-pair">
 	                                <input type="checkbox" name="trakt_remove_watchlist" id="trakt_remove_watchlist" #if $sickbeard.TRAKT_REMOVE_WATCHLIST then "checked=\"checked\"" else ""# />
 	                                <label class="clearfix" for="trakt_remove_watchlist">
-	                                    <span class="component-title">Remove from Watchlist:</span>
+	                                    <span class="component-title">Remove episode from Watchlist:</span>
 	                                    <span class="component-desc">Remove an episode from the watchlist after it is downloaded</span>
 	                                </label>
 	                            </div>
